# jira-cli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  jira.skill  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: ci.yml
jira_cli/: main.py  model.py
tests/: test_main.py  test_model.py
