[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-cli-top-moumoute"
version = "0.11.0"
description = "CLI to connect to JIRA"
readme = "README.md"
authors = [{ name = "aubustou", email = "survivalfr@yahoo.fr" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "atlassian-python-api>=3.41",
    "apischema>=0.18",
]

[project.urls]
Homepage = "https://www.github.com/aubustou/jira-cli"

[project.scripts]
jira-cli = "jira_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (flags old-style type annotations)
]
ignore = []

[tool.ruff.lint.isort]
known-third-party = []

[tool.bumpversion]
current_version = "0.11.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
